# pih-pah

./: .env  :w  Cargo.toml  TODO.md  count.back  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: deploy.yml  full_deploy_v1.yml  pull_request.yml
crate/client/: Cargo.toml
crate/client-server/: Cargo.toml
crate/client-server/script/: semi-auto-deploy.sh  server-to-list.sh  system-test.sh
crate/client-server/src/: lib.rs
crate/client-server/src/feature/: mod.rs
crate/client-server/src/feature/connection/: connection.rs  mod.rs  try1.rs
crate/client-server/src/feature/heartbeat/: heartbeat.rs  mod.rs
crate/client-server/src/feature/lobby/: lobby.rs  mod.rs  player.rs  scene.rs
crate/client-server/src/feature/lobby/client/: camera.rs  lobby.rs  mod.rs  player.rs  scene.rs
crate/client-server/src/feature/lobby/server/: lobby.rs  player.rs  scene.rs
crate/client-server/src/feature/multiplayer/: multiplayer.rs
crate/client-server/src/feature/multiplayer/client/: multiplayer.rs
crate/client-server/src/feature/multiplayer/server/: multiplayer.rs
crate/client-server/src/feature/music/: plugin.rs
crate/client-server/src/feature/shared/multiplayer/: multiplayer.rs
crate/client-server/src/feature/ui/: debug.rs  hud.rs  mod.rs  ui.rs
crate/client-server/src/lib/: egui_frame_preset.rs  netutils.rs
crate/client-server/src/lib/api/: error.rs  server.rs  user.rs
crate/client-server/src/ui/: mod.rs
crate/client-test/: Cargo.toml
crate/client/assets/: terrain-2.glb  terrain.glb  terrain.gltf  walking-extra.gltf  walking.gltf
crate/client/src/: lib.rs  main.rs
crate/client/src/feature/: mod.rs
crate/client/src/feature/lobby/: camera.rs  mod.rs  player.rs  scene.rs
crate/client/src/feature/multiplayer/: multiplayer.rs
crate/client/src/feature/music/: plugin.rs
crate/client/src/feature/ui/: debug.rs  hud.rs  mod.rs  ui.rs
crate/client/src/lib/api/: error.rs  mod.rs
crate/client/src/ui/: mod.rs
crate/entity/: Cargo.toml
crate/load-balancer/: Cargo.toml
crate/load_balancer/: .env  Cargo.toml  Rocket.toml
crate/load_balancer/migration/1695233636_initial/: down.psql  up.psql
crate/load_balancer/migration/2023-09-21-000342_initial_setup/: down.sql  up.sql
crate/load_balancer/migration/2023-09-21-000547_country_data/: up.sql
crate/load_balancer/migration/2023-09-22-135941_language_data/: down.sql  up.sql
crate/load_balancer/migration/2023-09-22-173207_jwt_token/: down.sql  up.sql
crate/load_balancer/migration/2023-09-22-195241_server_online/: down.sql  up.sql
crate/load_balancer/script/: db-setup.sh  reqmenu.sh  semi-auto-deploy.sh
crate/load_balancer/src/: lib.rs  main.rs  model.rs  schema.rs
crate/load_balancer/src/controller/: country.rs  language.rs  mod.rs  server.rs  user.rs
crate/load_balancer/src/controller/tool/: api_error.rs  auth.rs  mod.rs  shared.rs
crate/load_balancer/src/dto/req/: mod.rs  server.rs  user.rs
crate/load_balancer/src/dto/res/: country.rs  language.rs  mod.rs  server.rs  user.rs
crate/load_balancer/src/entity/req/: server.rs  user.rs
crate/load_balancer/src/entity/res/: country.rs  jwt_token.rs  language.rs  mod.rs  server.rs  user.rs
crate/load_balancer/src/model/: country.rs  jwt_token.rs  language.rs  mod.rs  server.rs  user.rs
crate/load_balancer/src/tool/: argon2.rs
crate/pih-pah-app/: Cargo.toml
crate/pih-pah-app/asset/: Contatti.lnk  albert.glb  gravity_hell.glb  pyramid.glb  test_map.glb  test_province.glb
crate/pih-pah-app/script/: hash.sh
crate/pih-pah-app/src/: controls.rs  editor.rs  game.rs  lib.rs  lobby.rs  main.rs
crate/pih-pah-app/src/actor/: actor.rs  mod.rs  physics_bundle.rs  projectile.rs  trace.rs  trase.rs
crate/pih-pah-app/src/actor/character/: character.rs
crate/pih-pah-app/src/asset_loader/: asset_loader.rs  mod.rs
crate/pih-pah-app/src/character/: character.rs  mod.rs
crate/pih-pah-app/src/component/: component.rs  despawn_type.rs  mod.rs
crate/pih-pah-app/src/controls/: controls.rs  mod.rs  resource.rs
crate/pih-pah-app/src/level_editor/: level_editor.rs  mod.rs
crate/pih-pah-app/src/load/: load.rs  mod.rs
crate/pih-pah-app/src/lobby/: client.rs  host.rs  lobby.rs  mod.rs  single.rs
crate/pih-pah-app/src/map/: gravity_hell.rs  map.rs  menu.rs  mod.rs  shooting_range.rs  spawn_point.rs
crate/pih-pah-app/src/option/: mod.rs  option.rs
crate/pih-pah-app/src/projectile/: projectile.rs
crate/pih-pah-app/src/province/: gravity_hell.rs  menu.rs  mod.rs  province.rs  shooting_range.rs  spawn_point.rs
crate/pih-pah-app/src/settings/: mod.rs  settings.rs
crate/pih-pah-app/src/sound/: mod.rs  music.rs  sound.rs
crate/pih-pah-app/src/ui/: debug.rs  egui_frame_preset.rs  game_menu.rs  menu.rs  mod.rs  runic_inscription.rs  ui.rs
crate/pih-pah-app/src/ui/egui/: egui.rs  egui_frame_preset.rs  menu.rs  mod.rs  options.rs
crate/pih-pah-app/src/ui/logic/: menu.rs  mod.rs  options.rs
crate/pih-pah-app/src/ui/lunex/: lunex.rs  mod.rs
crate/pih-pah-app/src/ui/menu/: menu.rs  mod.rs
crate/pih-pah-app/src/util/: extend_commands.rs  i18n.rs  mod.rs  util.rs
crate/pih-pah-app/src/world/: mod.rs  world.rs
crate/receiver/: Cargo.toml
crate/receiver/script/: semi-auto-deploy.sh
crate/receiver/src/: main.rs
crate/server/: Cargo.toml
crate/server-balancer/: Cargo.toml
crate/shared/: Cargo.toml
crate/shared/script/: deploy-server.sh  semi-auto-deploy.sh
crate/shared/src/: lib.rs
crate/shared/src/feature/: mod.rs
crate/shared/src/feature/lobby/: mod.rs  scene.rs
crate/shared/src/feature/lobby/server/: lobby.rs
crate/shared/src/feature/multiplayer/: mod.rs  multiplayer.rs
crate/shared/src/feature/multiplayer/server/: multiplayer.rs
crate/shared/src/lib/: extend_commands.rs  netutils.rs
crate/shared/src/lib/api/: server.rs  user.rs
crates/solo/: Cargo.toml
crates/solo/src/: main.rs
gdd/: gdd.md
renet_steam/: Cargo.toml
script/: log.sh
src/: lib.rs  main.rs  schema.rs
src/feature/: mod.rs
src/lib/: extend_commands.rs  netutils.rs
src/lobby/: mod.rs  player.rs
src/ui/: mod.rs
(+56 files in other folders)
