[package]
name = "pih-pah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# default = ["transport"]
# serde = ["renet/serde"]
# transport = ["renet/transport"]
# # steam = ["renet_steam"]

[dependencies]
bevy = { version = "0.11.2", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr", "x11", "tonemapping_luts", "ktx2", "zstd"] }
bincode = "1.3.1"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
renet = { git = "https://github.com/lucaspoffo/renet.git", package = "renet", version = "0.0.13", features = ["bevy", "serde", "transport" ] }
bevy_renet = { git = "https://github.com/lucaspoffo/renet.git", package = "bevy_renet", version = "0.0.9" }
regex = "1.9.5"
url = "2.4.1"
# renet_steam = { path = "../renet_steam", version = "0.0.1", features = [ "bevy" ], optional = true }
