[package]
name = "client"
version = "0.2.0"
edition = "2021"

[features]
wayland = ["win", "bevy/wayland", "shared/wayland"]
x11 = ["win", "bevy/x11", "shared/x11"]
windows = ["win", "shared/windows"]
win = ["bevy/bevy_winit"]

[dependencies]
bevy = { version = "0.12.0", default-features = false, features = ["bevy_scene", "bevy_asset", "tonemapping_luts", "multi-threaded" ] }
bincode = "1.3.1"
env_logger = "0.10.0"
serde = { version = "=1.0.169", features = ["derive"] }
renet = { git = "https://github.com/lucaspoffo/renet.git", package = "renet", version = "0.0.14", features = ["bevy", "serde", "transport" ] }
bevy_renet = { git = "https://github.com/lucaspoffo/renet.git", package = "bevy_renet", version = "0.0.10" }
regex = "1.9.5"
url = "2.4.1"
bevy_kira_audio = { version = "0.18.0", default-features = false, features = [ "wav" ] }
bevy_egui = "0.23.0"
bevy_xpbd_3d = { git = "https://github.com/yukkop/bevy_xpbd.git", branch = "bevy-redistributor", version = "0.3.2"  }
log = "0.4.20"
bevy-inspector-egui = "0.21.0"
epaint = "0.23.0"
# renet_steam = { path = "../renet_steam", version = "0.0.1", features = [ "bevy" ], optional = true }
lazy_static = "1.4.0"
ureq = { version = "2.7.1", features = [ "json" ] } # gigachad requests without async
serde_json = "1.0.107"
entity = { path = "../entity" }
shared = { path = "../shared" }
