[package]
name = "load-balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.1", features = ["postgres", "uuid"] }
dotenvy = "0.15.7"
rocket = { version = "=0.5.0-rc.3", features = ["uuid", "json"] }
serde_json = "1.0.103"
serde = { version = "1.0.169", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
argon2 = "2.0"
rand = "0.8.5"
