[package]
name = "pih-pah-app"
version = "0.1.0"
edition = "2021"

[features]
wayland = ["bevy/wayland", "bevy/bevy_winit"]
x11 = ["bevy/x11", "bevy/bevy_winit"]
windows = ["bevy/bevy_winit"]

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = ["bevy_gltf", "bevy_scene", "bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr", "tonemapping_luts", "ktx2", "zstd", "multi-threaded" ] }
bevy_kira_audio = { version = "0.18.0", default-features = false, features = [ "wav" ] }
bevy_egui = "0.23.0"
bevy_xpbd_3d = "0.3.2"

# multipleyer
renet = { git = "https://github.com/lucaspoffo/renet.git", package = "renet", version = "0.0.14", features = ["bevy", "serde", "transport" ] }
bevy_renet = { git = "https://github.com/lucaspoffo/renet.git", package = "bevy_renet", version = "0.0.10" }
bincode = "1.3.1"

# dev
bevy-inspector-egui = "0.21.0"

env_logger = "0.10.0"
serde = { version = "=1.0.193", features = ["derive"] }
regex = "1.9.5"
log = "0.4.20"
rand = "0.8.5"
lazy_static = "1.4.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
serde_yaml = "0.9.27"

# renet_steam = { path = "../renet_steam", version = "0.0.1", features = [ "bevy" ], optional = true }
# ureq = { version = "2.7.1", features = [ "json" ] } # gigachad requests without async
# serde_json = "1.0.107"
