[package]
name = "pih-pah-app"
version = "0.1.0"
edition = "2021"

[features]
wayland = ["bevy/wayland"]
x11 = ["bevy/x11"]
linking = ["bevy/dynamic_linking"]
dev = ["bevy_editor_pls"]
ui_lunex = []
ui_egui = []

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = ["bevy_ui", "bevy_winit", "bevy_gltf", "bevy_scene", "bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr", "tonemapping_luts", "ktx2", "zstd", "multi-threaded", "png" ] }
bevy_kira_audio = { version = "0.18.0", default-features = false, features = [ "wav" ] }
bevy_egui = "0.24.0"
# bevy_xpbd_3d = "0.3.2"
bevy_xpbd_3d = { git = "https://github.com/yukkop/bevy_xpbd.git", rev = "1b5a7225135d7c84d41e7b6007ec70bd4346ccae" }
# bevy_xpbd_3d = { path = "../../../bevy_xpbd/crates/bevy_xpbd_3d" }

# multipleyer
renet = { git = "https://github.com/lucaspoffo/renet.git", package = "renet", version = "0.0.14", features = ["bevy", "serde", "transport" ] }
bevy_renet = { git = "https://github.com/lucaspoffo/renet.git", package = "bevy_renet", version = "0.0.10" }
bincode = "1.3.1"

env_logger = "0.10.0"
serde = { version = "=1.0.193", features = ["derive"] }
regex = "1.9.5"
log = "0.4.20"
rand = "0.8.5"
lazy_static = "1.4.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
serde_yaml = "0.9.27"
winit = "0.28.0"
image = "0.24.0"
egui-gizmo = "0.12.0"
egui_dock = "0.9.0"
egui = { version = "0.24.0", features = ["persistence"] }

bevy_editor_pls = { version = "0.7.0", optional = true }
bevy_lunex = "0.0.9"
strum = "0.25.0"
strum_macros = "0.25.3"
bevy_gltf_blueprints = "0.5.1"
bevy_asset_loader = { version = "0.18", features = ["standard_dynamic_assets" ]} 
bevy-inspector-egui = "0.22.1"

# renet_steam = { path = "../renet_steam", version = "0.0.1", features = [ "bevy" ], optional = true }
# ureq = { version = "2.7.1", features = [ "json" ] } # gigachad requests without async
# serde_json = "1.0.107"