[package]
name = "server-balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
renet = { git = "https://github.com/lucaspoffo/renet.git", package = "renet", version = "0.0.13", features = ["bevy", "serde", "transport" ] }

