[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wayland = ["bevy/wayland", "bevy/bevy_winit"]
x11 = ["bevy/x11", "bevy/bevy_winit"]
windows = ["bevy/bevy_winit"]

[dependencies]
bevy = { version = "0.11.2", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr", "tonemapping_luts", "ktx2", "zstd", "multi-threaded" ] }
env_logger = "0.10.0"
serde = { version = "=1.0.169", features = ["derive"] }
renet = { git = "https://github.com/lucaspoffo/renet.git", package = "renet", version = "0.0.13", features = ["bevy", "serde", "transport" ] }
bevy_renet = { git = "https://github.com/lucaspoffo/renet.git", package = "bevy_renet", version = "0.0.9" }
regex = "1.9.5"
url = "2.4.1"
bevy_kira_audio = { version = "0.17.0", default-features = false, features = [ "wav" ] }
bevy_egui = "0.21.0"
bevy_xpbd_3d = "0.2.0"
log = "0.4.20"
bevy-inspector-egui = "0.19.0"
epaint = "0.22.0"
lazy_static = "1.4.0"
ureq = { version = "2.7.1", features = [ "json" ] } # gigachad requests without async
serde_json = "1.0.107"
entity = { path = "../entity" }
