[package]
name = "shared"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wayland = ["bevy/wayland", "bevy/bevy_winit"]
x11 = ["bevy/x11", "bevy/bevy_winit"]
windows = ["bevy/bevy_winit", "dep:bevy_egui", "dep:bevy-inspector-egui"]

[dependencies]
## debug
bevy_egui = { version = "0.23.0", optional = true }
bevy-inspector-egui = {  version = "0.21.0", optional = true }

## deafault
bevy = { version = "0.12.0", default-features = false, features = ["bevy_asset"] }
env_logger = "0.10.1"
serde = { version = "=1.0.169", features = ["derive"] }
renet = { git = "https://github.com/lucaspoffo/renet.git", package = "renet", version = "0.0.14", features = ["bevy", "serde", "transport" ] }
bevy_renet = { git = "https://github.com/lucaspoffo/renet.git", package = "bevy_renet", version = "0.0.10" }
regex = "1.9.5"
url = "2.4.1"
bevy_kira_audio = { version = "0.18.0", default-features = false, features = [ "wav" ] }
bevy_xpbd_3d = { version = "0.3.2" }
log = "0.4.20"
# bevy-inspector-egui = "0.21.0"
epaint = "0.23.0"
lazy_static = "1.4.0"
ureq = { version = "2.7.1", features = [ "json" ] } # gigachad requests without async
serde_json = "1.0.107"
entity = { path = "../entity" }
