[package]
name = "pih_pah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wayland = ["bevy/wayland"]
x11 = ["bevy/x11"]

[dependencies]
bevy = { version = "0.11.2", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "dynamic_linking", "bevy_asset", "bevy_pbr", "tonemapping_luts", "ktx2", "zstd" ] }
bincode = "1.3.1"
env_logger = "0.10.0"
serde = { version = "=1.0.169", features = ["derive"] }
regex = "1.9.5"
url = "2.4.1"
bevy_kira_audio = { version = "0.17.0", default-features = false, features = [ "wav" ] }
bevy_egui = "0.21.0"
bevy_xpbd_3d = "0.2.0"
log = "0.4.20"
bevy-inspector-egui = "0.19.0"
